# semantic-img

./: CMakeLists.txt  README.md  build_and_run.sh  seg.h  test_seg.cpp
